css/homepage.css
@import url("palette.css");
* {
    font-family: var(--fonts);
    box-sizing: border-box;
}

body,
html {
    width: 100%;
    height: 100%;
    margin: 0;
}

.welcome {
    width: 100%;
    height: 100%;
    background-image: url(/images/homepage.png);
    position: relative;
    background-position: center;
    background-repeat: no-repeat;
    background-size: auto;
}

#navbar {
    background-color: rgba(0, 0, 0, 0);
    justify-content: right;
}

#navbar>#logo,
#navbar>.input-container {
    display: none;
}

#exploreform {
    left: 10%;
    top: 8%;
    position: relative;
    max-width: 35%;
    height: 35%;
    padding: 0.5em 1em 0.5em 1em;
    background-color: var(--white-color);
    border: 0.5px solid var(--blue-color);
    border-radius: 1em;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
}

@media (max-width: 100em) {
    #exploreform {
        min-width: 20em;
    }
}

@media (max-height: 60em) {
    #exploreform {
        min-height: 20em;
    }
}

#exploreform {
    max-height: 60%;
}

#exploreform p {
    margin: 0 0 0 0;
}

#exploreform>h3 {
    margin: 0;
    font-weight: 100;
    grid-area: title;
    font-size: 2em;
}

#whereto {
    margin: 1em 0em;
}

#whereto input {
    margin-top: 2%;
    border-radius: 5px;
    min-width: 95%;
    height: 80%;
}

#check {
    margin: 1em 0em;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
}

#checkin,
#checkout {
    width: 50%;
}

#checkin input,
#checkout input {
    margin-top: 2%;
    height: 80%;
    border-radius: 5px;
}

#checkin input {
    width: 90%;
}

#checkout input {
    width: 90%;
    align-content: end;
}

#guestbot {
    margin: 1em 0em;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

#guests {
    min-width: 50%;
}

#guests input {
    margin-top: 2%;
    border-radius: 5px;
    height: 70%;
    min-width: 80%;
}

#button {
    margin: 5% 5% 0 0;
    text-align: end;
    width: 50%;
}

#button input {
    padding: 5% 20%;
    background-color: var(--pink-color);
    border-radius: 5px;
    border: 0.5px solid var(--grey-color);
    color: var(--white-color);
}


/* ---------------------------------------------------------------------------- */

#explore {
    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.75);
}

#regions {
    margin: 0em 4em;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
}

.landscape a {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-content: space-between;
}

.landscape {
    border: 1px solid var(--blue-color);
    width: 20em;
    margin: 0em 0em 1em 0em;
    border-radius: 10px;

}

.landscape > a img {
    width: 19.90em;
    height: 12em;
    border-top-left-radius: 9px;
    border-top-right-radius: 9px;
    margin-bottom: 0;
}

.explore>p {
    padding: 0.5em 0em 1.5em 4em;
    font-size: 2em;
}

.landscape > a {
    text-decoration: none;
}

.landscape > a p {
    text-align: center;
    background-color: var(--pink-color);
    color: var(--white-color);
    font-size: 1.5em;
    padding: 1em 0em;
    border-bottom-left-radius: 9px;
    border-bottom-right-radius: 9px;
    border-top: 1px solid var(--blue-color);
    margin-top: 0;
}

